Fix #1518: Prefer List.of over guava ImmutableList